--- a/css/estilos.css
+++ b/css/estilos.css
@@ -193,6 +193,7 @@ label {
     border-color: white;
     margin-top: 1rem;
     text-transform: uppercase;
+    color: white;
 }
 
 h3 {
@@ -236,7 +237,7 @@ iframe {
     text-align: center;
 }
 
- /* Al ver en el live server la foto, le queda un espacio en blanco abajo que no pude solucionar */
+/* Al ver en el live server la foto, le queda un espacio en blanco abajo que no pude solucionar */
 
 
 .contenedorPadreServicios {
@@ -250,7 +251,7 @@ iframe {
     background-position: center;
 }
 
- /* Tutor, mi idea es que la lista en pantalla grande se vea en dos filas, pero no se me aplican los cambios que pongo en el css, tampoco me queda centrado con el contenedor :(((( espero me lo puedan corregir*/
+/* Tutor, mi idea es que la lista en pantalla grande se vea en dos filas, pero no se me aplican los cambios que pongo en el css, tampoco me queda centrado con el contenedor :(((( espero me lo puedan corregir*/
 
 ul {
     list-style: none;
@@ -265,6 +266,10 @@ ul {
 .contenedorHijoServicios .servicios {
     color: white;
     text-align: center;
+}
+
+.servicios {
+    display: flex;
 }
 
 .contenedorImg {
@@ -287,6 +292,17 @@ ul {
 
 }
 
+.campos {
+    display: block;
+    width: 25rem;
+    margin-bottom: 10px;
+    padding: 8px;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: transparent;
+}
+
+
 
 /* Estilos para dispositivos celulares con ancho de pantalla de hasta 320px */
 @media only screen and (max-width: 320px) {
@@ -294,6 +310,17 @@ ul {
     .logo {
         padding: 0rem;
         cursor: pointer;
+    }
+
+    .contenedorPadre {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .contenedorHijo {
+        flex: 100%;
+        width: 100%;
+        margin-bottom: 3rem;
     }
 
 
@@ -332,7 +359,7 @@ ul {
     }
 
     .emailRes {
-        font-size: 0, 3rem;
+        font-size: 0.3rem;
         text-align: start;
     }
 
@@ -362,6 +389,56 @@ ul {
         flex-direction: column;
         /* Centrar el contenido horizontalmente */
         align-items: center;
+    }
+
+    .contenedorPadre {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0rem;
+    }
+
+    .contenedorHijo {
+        padding-top: 3rem;
+    }
+
+    .mapaContainer {
+        display: flex;
+        justify-content: center;
+        height: auto;
+    }
+
+    .map {
+        width: 100%;
+        height: 100%;
+    }
+
+    .contenedorPadreAbout {
+        height: 450px;
+    }
+
+    .titulo.about {
+        font-size: 1,5rem;
+        /* Ajusta el tamaño de fuente del título */
+    }
+
+    .campos {
+        width: 100%;
+        /* Ajusta el ancho de los campos de entrada */
+    }
+
+    .textarea {
+        height: 85px;
+        /* Ajusta la altura del campo de texto */
+    }
+
+    .botonFormulario {
+        font-size: 0.8rem;
+
+    }
+
+    .button {
+        font-size: 0.8rem;
     }
 
 }
