--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,2 +1,2 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;800&display=swap');
-@import "general","header","mainindex","footer","mainpags","servicios","suscri"
+@import "general","header","mainindex","footer","mainpags","servicios","suscri","contacto","medias","mixin"
