--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;800&display=swap");
 * {
   margin: 0;
@@ -10,13 +11,23 @@
   text-transform: uppercase;
   color: black;
   font-size: 2rem;
+  animation: tit 1.5s ease-in;
 }
 
+@keyframes tit {
+  0% {
+    opacity: 0%;
+  }
+  100% {
+    opacity: 100%;
+  }
+}
 .cuerpoTexto {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   line-height: 1.5;
   font-size: 1rem;
+  animation: tit 2s ease-in;
 }
 
 .alineacion {
@@ -59,45 +70,6 @@ ul {
   object-fit: cover;
 }
 
-.botonFormulario {
-  cursor: pointer;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 400;
-  padding: 10px;
-  border-radius: 4px;
-  background-color: black;
-  border-color: white;
-  margin-top: 1rem;
-  text-transform: uppercase;
-  color: white;
-}
-
-.campos {
-  display: block;
-  width: 25rem;
-  margin-bottom: 10px;
-  padding: 8px;
-  border: 2px solid #ccc;
-  border-radius: 4px;
-  background-color: transparent;
-}
-
-.email {
-  display: block;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 400;
-  color: white;
-  display: flex;
-  align-self: self-start;
-}
-
-label {
-  display: block;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 400;
-  margin-bottom: 9px;
-}
-
 .contenedorPadreAbout {
   display: flex;
   justify-content: center;
@@ -113,9 +85,6 @@ label {
 }
 .contenedorPadreAbout .fondoAbout .about {
   color: white;
-}
-.contenedorPadreAbout .fondoAbout .alineacion {
-  align-items: center;
 }
 
 header li {
@@ -199,6 +168,9 @@ main .contenedorPadreAbout .fondoAbout .about {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
 }
 .contenedorPadreHair .contenedorHijoHairUno {
   flex: 40%;
@@ -231,25 +203,17 @@ main .contenedorPadreAbout .fondoAbout .about {
   text-align: center;
 }
 
-.contenedorPadreAbout .fondoAbout .alineacion form {
+.contenedorPadreAbout .fondoAbout form {
   text-align: center;
   margin: 40px 74px;
 }
-.contenedorPadreAbout .fondoAbout .alineacion form label {
+.contenedorPadreAbout .fondoAbout form label {
   display: block;
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   margin-bottom: 9px;
 }
-.contenedorPadreAbout .fondoAbout .alineacion form label .email {
-  display: block;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 400;
-  color: white;
-  display: flex;
-  align-self: self-start;
-}
-.contenedorPadreAbout .fondoAbout .alineacion form .botonFormulario {
+.contenedorPadreAbout .fondoAbout form .botonFormulario {
   cursor: pointer;
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
@@ -261,14 +225,166 @@ main .contenedorPadreAbout .fondoAbout .about {
   text-transform: uppercase;
   color: white;
 }
-.contenedorPadreAbout .fondoAbout .alineacion form .campos {
+.contenedorPadreAbout .fondoAbout form .campos {
   display: block;
-  width: auto;
+  width: 25rem;
   margin-bottom: 10px;
   padding: 8px;
   border: 2px solid #ccc;
   border-radius: 4px;
   background-color: transparent;
+}
+.contenedorPadreAbout .fondoAbout form .email {
+  display: block;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  color: white;
+  display: flex;
+  align-self: self-start;
+}
+
+.contenedorPadreContacto {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 5rem 10rem;
+}
+.contenedorPadreContacto .contenedorHijoContacto {
+  padding-top: 3rem;
+}
+.contenedorPadreContacto .mapaContainer {
+  width: 30rem;
+  height: 30rem;
+}
+.contenedorPadreContacto .mapaContainer .map {
+  width: 100%;
+  height: 100%;
+  border-radius: 0.3rem;
+}
+
+@media only screen and (max-width: 320px) {
+  header .logo {
+    cursor: pointer;
+    padding: 1rem 1rem;
+  }
+  main .contenedorPadre {
+    flex-direction: column;
+    width: 100%;
+  }
+  main .contenedorPadre .alineacion {
+    text-align: center;
+  }
+  main .contenedorPadre .contenedorHijo {
+    flex: 100%;
+    width: 100%;
+    margin-bottom: 3rem;
+  }
+  main .contenedorPadre .contenedorHijo .titulo {
+    font-size: 1.5rem;
+  }
+  main .contenedorPadre .contenedorHijo .cuerpoTexto {
+    font-size: 0.7rem;
+  }
+}
+/* No tuve tiemo de pasar el código a sass :(*/
+.contenedorHijoHairUno,
+.contenedorHijoHairDos {
+  flex: 100%;
+}
+
+.contenedorHijoHairDos {
+  margin: 50px 15px;
+}
+
+.contenedorPadreAbout {
+  height: 60vh;
+}
+
+.submitBoton {
+  margin-top: 2rem;
+  display: flex;
+  justify-self: end;
+}
+
+.emailRes {
+  font-size: 0.3rem;
+  text-align: start;
+}
+
+.contenedorImg {
+  height: 40vh;
+}
+
+.directionFooter {
+  font-size: 0.7rem;
+  /* Reducir el tamaño de fuente del título */
+}
+
+.futureFooter {
+  font-size: 1rem;
+  /* Reducir el tamaño de fuente del título */
+}
+
+.contenedorPadreServicios {
+  height: 70vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.servicios {
+  text-align: center;
+  flex-direction: column;
+  /* Centrar el contenido horizontalmente */
+  align-items: center;
+}
+
+.contenedorPadre {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0rem;
+}
+
+.contenedorHijo {
+  padding-top: 3rem;
+}
+
+.mapaContainer {
+  display: flex;
+  justify-content: center;
+  height: auto;
+}
+
+.map {
+  width: 100%;
+  height: 100%;
+}
+
+.contenedorPadreAbout {
+  height: 450px;
+}
+
+.titulo.about {
+  font-size: 1, 5rem;
+  /* Ajusta el tamaño de fuente del título */
+}
+
+.campos {
+  width: 100%;
+  /* Ajusta el ancho de los campos de entrada */
+}
+
+.textarea {
+  height: 85px;
+  /* Ajusta la altura del campo de texto */
+}
+
+.botonFormulario {
+  font-size: 0.8rem;
+}
+
+.button {
+  font-size: 0.8rem;
 }
 
 /*# sourceMappingURL=estilo.css.map */
