--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -9,6 +9,16 @@
     text-transform: uppercase;
     color: black;
     font-size: 2rem;
+    animation: tit 1.5s ease-in;
+}
+
+@keyframes tit {
+0% {
+    opacity: 0%;
+}
+100% {
+    opacity: 100%;
+}
 }
 
 .cuerpoTexto {
@@ -16,6 +26,8 @@
     font-weight: 400;
     line-height: 1.5;
     font-size: 1rem;
+    animation: tit 2s ease-in;
+
 }
 
 .alineacion {
@@ -59,45 +71,6 @@ ul {
     object-fit: cover;
 }
 
-.botonFormulario {
-    cursor: pointer;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    padding: 10px;
-    border-radius: 4px;
-    background-color: black;
-    border-color: white;
-    margin-top: 1rem;
-    text-transform: uppercase;
-    color: white;
-}
-
-.campos {
-    display: block;
-    width: 25rem;
-    margin-bottom: 10px;
-    padding: 8px;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    background-color: transparent;
-}
-
-.email {
-    display: block;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    color: white;
-    display: flex;
-    align-self: self-start;
-}
-
-label {
-    display: block;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    margin-bottom: 9px;
-}
-
 .contenedorPadreAbout {
     display: flex;
     justify-content: center;
@@ -111,9 +84,6 @@ label {
         text-align: center;
         .about {
             color: white;
-        }
-        .alineacion {
-            align-items: center;
         }
     }
 }
