--- a/scss/_mainpags.scss
+++ b/scss/_mainpags.scss
@@ -1,16 +1,20 @@
 .contenedorPadreHair {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	.contenedorHijoHairUno {
-		flex: 40%;
-		.imagenUno {
-			width: 100%;
-			height: auto;
-		}
-	}
-	.contenedorHijoHairDos {
-		flex: 60%;
-		text-align: center;
-	}
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    .contenedorHijoHairUno {
+        flex: 40%;
+        .imagenUno {
+            width: 100%;
+            height: auto;
+        }
+    }
+
+    .contenedorHijoHairDos {
+        flex: 60%;
+        text-align: center;
+    }
 }
