--- a/scss/_suscri.scss
+++ b/scss/_suscri.scss
@@ -1,44 +1,46 @@
 .contenedorPadreAbout {
 	.fondoAbout {
-		.alineacion {
-			form {
-				text-align: center;
-				margin: 40px 74px;
-                label {
-					display: block;
-					font-family: 'Montserrat', sans-serif;
-					font-weight: 400;
-					margin-bottom: 9px;
-					.email {
-						display: block;
-						font-family: 'Montserrat', sans-serif;
-						font-weight: 400;
-						color: white;
-						display: flex;
-						align-self: self-start;
-					}
-				}
-				.botonFormulario {
-					cursor: pointer;
-					font-family: 'Montserrat', sans-serif;
-					font-weight: 400;
-					padding: 10px;
-					border-radius: 4px;
-					background-color: black;
-					border-color: white;
-					margin-top: 1rem;
-					text-transform: uppercase;
-					color: white;
-				}
-				.campos {
-					display: block;
-					width: auto;
-					margin-bottom: 10px;
-					padding: 8px;
-					border: 2px solid #ccc;
-					border-radius: 4px;
-					background-color: transparent;
-				}
+		form {
+			text-align: center;
+			margin: 40px 74px;
+			label {
+				display: block;
+				font-family: 'Montserrat', sans-serif;
+				font-weight: 400;
+				margin-bottom: 9px;
+			}
+			.botonFormulario {
+				cursor: pointer;
+				font-family: 'Montserrat', sans-serif;
+				font-weight: 400;
+				padding: 10px;
+				border-radius: 4px;
+				background-color: black;
+				border-color: white;
+				margin-top: 1rem;
+				text-transform: uppercase;
+				color: white;
+			}
+			.campos {
+				display: block;
+				width: 25rem;
+				margin-bottom: 10px;
+				padding: 8px;
+				border: 2px solid #ccc;
+				border-radius: 4px;
+				background-color: transparent;
+			}
+		}
+	}
+    .fondoAbout {
+		form {
+			.email {
+				display: block;
+				font-family: 'Montserrat', sans-serif;
+				font-weight: 400;
+				color: white;
+				display: flex;
+				align-self: self-start;
 			}
 		}
 	}
