--- a/css/estilo.css
+++ b/css/estilo.css
@@ -228,6 +228,7 @@ main .contenedorPadreAbout .fondoAbout .about {
   display: block;
   width: 25rem;
   margin-bottom: 10px;
+  margin: 0 auto;
   padding: 8px;
   border: 2px solid #ccc;
   border-radius: 4px;
@@ -240,6 +241,7 @@ main .contenedorPadreAbout .fondoAbout .about {
   color: white;
   display: flex;
   align-self: self-start;
+  margin-right: 0rem;
 }
 
 .contenedorPadreContacto {
@@ -261,14 +263,13 @@ main .contenedorPadreAbout .fondoAbout .about {
   border-radius: 0.3rem;
 }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 750px) {
   header .logo {
     cursor: pointer;
     padding: 1rem 1rem;
   }
   main .contenedorPadre {
     flex-direction: column;
-    width: 100%;
   }
   main .contenedorPadre .alineacion {
     text-align: center;
