--- a/scss/_suscri.scss
+++ b/scss/_suscri.scss
@@ -3,12 +3,14 @@
 		form {
 			text-align: center;
 			margin: 40px 74px;
+
 			label {
 				display: block;
 				font-family: 'Montserrat', sans-serif;
 				font-weight: 400;
 				margin-bottom: 9px;
 			}
+
 			.botonFormulario {
 				cursor: pointer;
 				font-family: 'Montserrat', sans-serif;
@@ -21,10 +23,12 @@
 				text-transform: uppercase;
 				color: white;
 			}
+
 			.campos {
 				display: block;
 				width: 25rem;
 				margin-bottom: 10px;
+				margin: 0 auto;
 				padding: 8px;
 				border: 2px solid #ccc;
 				border-radius: 4px;
@@ -32,7 +36,8 @@
 			}
 		}
 	}
-    .fondoAbout {
+
+	.fondoAbout {
 		form {
 			.email {
 				display: block;
@@ -41,6 +46,7 @@
 				color: white;
 				display: flex;
 				align-self: self-start;
+				margin-right: 0rem;
 			}
 		}
 	}
