--- a/css/estilo.css
+++ b/css/estilo.css
@@ -263,7 +263,7 @@ main .contenedorPadreAbout .fondoAbout .about {
   border-radius: 0.3rem;
 }
 
-@media only screen and (max-width: 750px) {
+@media (max-width: 575px) {
   header .logo {
     cursor: pointer;
     padding: 1rem 1rem;
@@ -374,6 +374,285 @@ main .contenedorPadreAbout .fondoAbout .about {
   }
   .contenedorPadreAbout {
     height: 70vh;
+  }
+  .contenedorPadreAbout .fondoAbout form .campos {
+    width: 15rem;
+  }
+  .contenedorPadreContacto {
+    display: flex;
+    flex-direction: column;
+    margin: 2rem;
+  }
+  .contenedorPadreContacto .contenedorHijoContacto {
+    padding: 2rem;
+  }
+  .contenedorPadreContacto .mapaContainer {
+    width: 100%;
+    height: 15rem;
+  }
+  .contenedorPadreContacto .mapaContainer .map {
+    width: 100%;
+    height: 100%;
+    border-radius: 0.3rem;
+  }
+  .contenedorPadreAbout {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .contenedorPadreAbout .fondoAbout {
+    max-height: 50vh;
+  }
+  .contenedorPadreAbout .fondoAbout form {
+    margin: 20px;
+  }
+  .contenedorPadreAbout .fondoAbout form label {
+    margin-bottom: 6px;
+  }
+  .contenedorPadreAbout .fondoAbout form .botonFormulario {
+    cursor: pointer;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    padding: 10px;
+    border-radius: 4px;
+    background-color: black;
+    border-color: white;
+    margin-top: 1rem;
+    text-transform: uppercase;
+    color: white;
+  }
+  .contenedorPadreAbout .fondoAbout form .textarea {
+    height: 100px;
+    margin-top: 1rem;
+  }
+}
+@media (min-width: 576px) and (max-width: 767px) {
+  header .logo {
+    cursor: pointer;
+    padding: 1rem 1rem;
+  }
+  main .contenedorPadre {
+    flex-direction: column;
+  }
+  main .contenedorPadre .alineacion {
+    text-align: center;
+    margin-bottom: 3rem;
+    margin-top: 3rem;
+  }
+  main .contenedorPadre .contenedorHijo {
+    flex: 100%;
+    width: 100%;
+  }
+  main .contenedorPadreAbout {
+    height: auto;
+  }
+  main .contenedorPadreAbout .fondoAbout {
+    max-width: 800px;
+    text-align: center;
+  }
+  main .contenedorPadreAbout .fondoAbout .about {
+    color: white;
+  }
+  main .contenedorPadreAbout .alineacion {
+    margin: 3rem 2rem;
+  }
+  .alineacion p {
+    padding: 1rem 2rem;
+    margin: 0rem;
+  }
+  .alineacion .titulo {
+    margin: 0rem 3rem;
+  }
+  .button {
+    border-radius: 3px;
+    font-size: 1rem;
+    padding: 10px;
+  }
+  .titulo {
+    font-size: 1.8rem;
+  }
+  .cuerpoTexto {
+    font-size: 1rem;
+  }
+  .footer {
+    text-align: center;
+    margin: 80px;
+  }
+  .footer .futureFooter {
+    text-transform: uppercase;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 800;
+    font-size: 2rem;
+  }
+  .footer .directionFooter {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    font-size: 1rem;
+  }
+  .footer {
+    height: 0rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .footer .futureFooter {
+    font-size: 1rem;
+  }
+  .footer .directionFooter {
+    font-size: 0.7rem;
+  }
+  .contenedorPadreHair {
+    flex-direction: column;
+    height: 200vh;
+  }
+  .contenedorPadreHair .alineacion {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 3rem;
+    margin-top: 3rem;
+  }
+  .contenedorPadreHair .contenedorHijoHairUno {
+    flex: 100%;
+  }
+  .contenedorPadreHair .contenedorHijoHairUno .imagenUno {
+    max-width: 100%;
+    height: auto;
+  }
+  .contenedorPadreHair .contenedorHijoHairDos {
+    flex: 100%;
+    height: 90vh;
+  }
+  .contenedorPadreServicios {
+    min-height: 60vh;
+  }
+  .contenedorPadreServicios .contenedorHijoServicios .titulo {
+    text-align: center;
+    color: white;
+    margin-bottom: 2rem;
+  }
+  .contenedorPadreServicios .contenedorHijoServicios .servicios {
+    color: white;
+    text-align: center;
+  }
+  .contenedorImg {
+    height: auto;
+  }
+  .img {
+    height: 60vh;
+  }
+  .contenedorPadreAbout {
+    height: 80vh;
+  }
+  .contenedorPadreAbout .fondoAbout form .campos {
+    width: 15rem;
+  }
+  .contenedorPadreContacto {
+    display: flex;
+    flex-direction: column;
+    margin: 2rem;
+  }
+  .contenedorPadreContacto .contenedorHijoContacto {
+    padding: 2rem;
+  }
+  .contenedorPadreContacto .mapaContainer {
+    width: 100%;
+    height: 15rem;
+  }
+  .contenedorPadreContacto .mapaContainer .map {
+    width: 100%;
+    height: 100%;
+    border-radius: 0.3rem;
+  }
+  .contenedorPadreAbout {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .contenedorPadreAbout .fondoAbout {
+    max-height: 50vh;
+  }
+  .contenedorPadreAbout .fondoAbout form {
+    margin: 20px;
+  }
+  .contenedorPadreAbout .fondoAbout form label {
+    margin-bottom: 6px;
+  }
+  .contenedorPadreAbout .fondoAbout form .botonFormulario {
+    cursor: pointer;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    padding: 10px;
+    border-radius: 4px;
+    background-color: black;
+    border-color: white;
+    margin-top: 1rem;
+    text-transform: uppercase;
+    color: white;
+  }
+  .contenedorPadreAbout .fondoAbout form .textarea {
+    height: 100px;
+    margin-top: 1rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  header .logo {
+    cursor: pointer;
+    padding: 1rem 1rem;
+  }
+  main .contenedorPadreAbout {
+    height: 80vh;
+  }
+  main .contenedorPadreAbout .fondoAbout {
+    max-width: 800px;
+    text-align: center;
+  }
+  main .contenedorPadreAbout .fondoAbout .about {
+    color: white;
+  }
+  main .contenedorPadreAbout .alineacion {
+    margin: 3rem 2rem;
+  }
+  .alineacion p {
+    padding: 1rem 2rem;
+    margin: 0rem;
+  }
+  .alineacion .titulo {
+    margin: 0rem 3rem;
+  }
+  .button {
+    border-radius: 3px;
+    font-size: 1rem;
+    padding: 10px;
+  }
+  .titulo {
+    font-size: 1.8rem;
+  }
+  .cuerpoTexto {
+    font-size: 1rem;
+  }
+  .contenedorPadreServicios {
+    min-height: 60vh;
+  }
+  .contenedorPadreServicios .contenedorHijoServicios .titulo {
+    text-align: center;
+    color: white;
+    margin-bottom: 2rem;
+  }
+  .contenedorPadreServicios .contenedorHijoServicios .servicios {
+    color: white;
+    text-align: center;
+  }
+  .contenedorImg {
+    height: auto;
+  }
+  .img {
+    height: 60vh;
+  }
+  .contenedorPadreAbout {
+    height: 80vh;
   }
   .contenedorPadreAbout .fondoAbout form .campos {
     width: 15rem;
